[tool.poetry]
name = "pykeys"
version = "0.1.0"
description = ""
authors = ["GregRos <life.gregr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keyboard = "^0.13.5"
pywin32 = "^308"
beautifultable = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
