[tool.poetry]
name = "pykeys"
version = "0.12.0"
description = ""
authors = ["GregRos <life.gregr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
keyboard = "^0.13.5"
pywin32 = "^311"
beautifultable = "^1.1.0"
prettytable = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
